welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: type mismatch;
 found   : String
 required: Int
                                                    T2(i)=litMessage;
                                                          ^